--- a/bio.html
+++ b/bio.html
@@ -6,21 +6,53 @@
     </head>
     <body>
         <header>
-            <h1 class="header">David Todd</h1>
+            <h1 class="header">david alan todd</h1>
             <nav>
-                <a href="/index.html" class="header">About</a>
-                <a href="/bio.html" class="header">Bio</a>
-                <a href="/experience.html" class="header">Experience</a>
-                <a href="/portfolio.html" class="header">Portfolio</a>
+                <a href="/index.html" class="header">about</a>
+                <a href="/bio.html" class="header">bio</a>
+                <a href="/experience.html" class="header">experience</a>
+                <a href="/portfolio.html" class="header">portfolio</a>
             </nav>
-    </header>
+        </header>
         <main>
-            <h2>Bio</h2>
-            <p><p>Hello! My name is David (he/him) and I’m one of the Software Engineering Coaches on the US team. I was born and raised in Ellicott City, MD (near Baltimore), and I currently reside in the Boston, MA area. Prior to Multiverse, I worked as a higher education administrator at several universities where I found my passion for helping and mentoring students as they developed new skills. As a queer, multiracial person with immigrant parents (from the Cayman Islands and the UK), I gravitate toward places where I can be authentically me and opportunities which allow me to work toward equity, inclusion, and social justice. I graduated from the University of Maryland, College Park with a dual degree in Computer Science and Theatre and wasn’t exactly sure what I wanted to do next. After being heavily involved in student leadership opportunities on campus, I earned a master's degree in College Student Affairs Administration from the University of Georgia. I pursued this career path partly because I didn’t feel I belonged in the tech space. Building relationships with students, creating transformative learning experiences, and teaching leadership and teamwork skills was rewarding and impactful. However, after learning about Multiverse’s mission to prepare a diverse group of future leaders and democratize access to great career opportunities… I wanted to be part of it! I look forward to using my experiences in education and computer science to help apprentices find their place in tech, gain the confidence to pursue their careers in software engineering, and do all of this while being their true selves. Outside of Multiverse, I enjoy spending time outside hiking and birding with my partner and dog, singing and appreciating music (especially musical theatre!), traveling with friends, going to the beach, and catching up on the latest season of RuPaul’s Drag Race. I can’t wait to get to know you!</p></p>
+            <div class="words">
+                <h1 class="subpagecard" id="bio">biography</h1>
+           
+                <p>Hello! My name is David (he/him) and I’m one of the Software Engineering Coaches on the US 
+                    team. I was born and raised in Ellicott City, MD (near Baltimore), and I currently reside 
+                    in the Boston, MA area.</p>    
+                <p>Prior to Multiverse, I worked as a higher education administrator 
+                    at several universities where I found my passion for helping and mentoring students as they
+                    developed new skills. As a queer, multiracial person with immigrant parents (from the 
+                    Cayman Islands and the UK), I gravitate toward places where I can be authentically me 
+                    and opportunities which allow me to work toward equity, inclusion, and social justice. 
+                    I graduated from the University of Maryland, College Park with a dual degree in Computer
+                    Science and Theatre and wasn’t exactly sure what I wanted to do next. </p>
+                <p> After being heavily involved in student leadership opportunities on campus, I earned a master's 
+                    degree in College Student Affairs Administration from the University of Georgia. 
+                    I pursued this career path partly because I didn’t feel I belonged in the tech space.
+                    Building relationships with students, creating transformative learning experiences, 
+                    and teaching leadership and teamwork skills was rewarding and impactful. However, 
+                    after learning about Multiverse’s mission to prepare a diverse group of future 
+                    leaders and democratize access to great career opportunities… I wanted to be part of it!</p>
+                <p>I look forward to using my experiences in education and computer science to help 
+                    apprentices find their place in tech, gain the confidence to pursue their careers 
+                    in software engineering, and do all of this while being their true selves. Outside 
+                    of Multiverse, I enjoy spending time outside hiking and birding with my partner 
+                    and dog, singing and appreciating music (especially musical theatre!), traveling with
+                        friends, going to the beach, and catching up on the latest season of RuPaul’s 
+                        Drag Race. I can’t wait to get to know you!
+                    </p>
+
+            </div>
         </main>
         <footer>
-            <h3>Footer</h3>
-            <!--put social links here-->
+            <a href="https://www.linkedin.com/in/david-alan-todd" target="_blank" rel="noreferrer opener">
+                    <img src="pictures/linkedin.png" alt="linkedin logo">
+            </a>
+            <a href="https://www.multiverse.io" target="_blank" rel="noreferrer opener">
+                <img src="pictures/multiverse.png" alt="Multiverse logo">
+            </a>
         </footer>
     </body>
 </html>
