--- a/experience.html
+++ b/experience.html
@@ -8,10 +8,10 @@
         <header>
             <h1 class="header">david alan todd</h1>
             <nav>
-                <a href="/profile-site/index.html" class="header">about</a>
-                <a href="/profile-site/bio.html" class="header">bio</a>
-                <a href="/profile-site/experience.html" class="header">experience</a>
-                <a href="/profile-site/portfolio.html" class="header">portfolio</a>
+                <a href="index.html" class="header">about</a>
+                <a href="bio.html" class="header">bio</a>
+                <a href="experience.html" class="header">experience</a>
+                <a href="portfolio.html" class="header">portfolio</a>
             </nav>
         </header>
         <main>
